hphp/test/slow/enum_supertyping/bad_conflict_parent.php.expectf
Fatal error: Cannot override previously defined constant E::A in F in %s/bad_conflict_parent.php on line 8
